--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "next",
-    "build": "next build"
+    "build": "next build",
+    "now-build":"next build && next export -o dist"
   },
   "author": "",
   "license": "ISC",
